--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ng-json-prettifier",
   "version": "0.0.1",
   "description": "An Angular directive to prettify your Json items",
-  "main": "idst/ng-pretty-json.min.js",
+  "main": "dist/ng-pretty-json.min.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/arnauddri/ng-json-prettifier"
@@ -32,5 +32,6 @@
   "homepage": "https://github.com/arnauddri/ng-pretty-json",
   "directories": {
     "example": "example"
-  }
+  },
+  "dependencies": {}
 }
