--- a/package.json
+++ b/package.json
@@ -33,5 +33,11 @@
   "directories": {
     "example": "example"
   },
-  "dependencies": {}
+  "devDependencies": {
+    "jasmine-core": "^2.1.3",
+    "karma-jasmine": "^0.3.4",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-firefox-launcher": "^0.1.4",
+    "karma": "^0.12.31"
+  }
 }
